--- a/cookies.html
+++ b/cookies.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coin Gangster</title>
-    <link rel="icon" href="img/fav b.jpg" />
+    <title>Jewels Star 3</title>
+    <link rel="icon" href="image/Fav  L.jpg" />
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -17,27 +17,27 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="/" class="navigation__link"
-              ><img href="/" class="header-title navigation-img" alt=""
-            /></a>
-          </li>
-          <li class="navigation__item">
             <a href="/" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About us</a>
+            <a href="/#features" class="navigation__link">Benefits</a>
           </li>
           <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Benefits </a>
+            <a href="/#about" class="navigation__link">About This Game</a>
           </li>
           <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Gallery</a>
+            <a href="/#how" class="navigation__link">How to Play</a>
           </li>
-
           <li class="navigation__item">
             <a href="/#faq" class="navigation__link">FAQ</a>
           </li>
+          <li class="navigation__item">
+            <a href="/#reviews" class="navigation__link">Reviews</a>
+          </li>
 
+          <li class="navigation__item">
+            <a href="/#gallery" class="navigation__link">Gallery</a>
+          </li>
           <li class="navigation__item">
             <a
               href="/policy.html"
@@ -67,13 +67,12 @@
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/Frame 64.png"
               alt=""
             />
-
             <img
               class="header__icon header__icon--close close"
-              src="img/header/ep_close-bold.png"
+              src="image/header/Frame 65.png"
               alt=""
             />
           </button>
@@ -86,7 +85,7 @@
         <div class="policy-terms-container">
           <h2 class="policy-terms-title">Cookies Policy</h2>
 
-          <p class="policy-terms-text-one">Last updated: January 30, 2025</p>
+          <p class="policy-terms-text-one">Last updated: February 10, 2025</p>
 
           <p class="policy-terms-text-one">
             This Cookies Policy explains what Cookies are and how We use them.
@@ -129,19 +128,20 @@
           </p>
           <ul class="terms-lists">
             <li>
-              ·Company (referred to as either "the Company", "We", "Us" or "Our"
-              in this Cookies Policy) refers to Perfect Blast.
+              Company (referred to as either "the Company", "We", "Us" or "Our"
+              in this Cookies Policy) refers to sparkarcstar.com.
             </li>
             <li>
-              ·Cookies means small files that are placed on Your computer,
-              mobile device or any other device by a website, containing details
-              of your browsing history on that website among its many uses.
+              Cookies means small files that are placed on Your computer, mobile
+              device or any other device by a website, containing details of
+              your browsing history on that website among its many uses.
             </li>
             <li>
-              · Website refers to Coin Gangster, accessible from joyblazehub.com
+              Website refers to sparkarcstar.com, accessible from
+              sparkarcstar.com
             </li>
             <li>
-              ·You means the individual accessing or using the Website, or a
+              You means the individual accessing or using the Website, or a
               company, or any legal entity on behalf of which such individual is
               accessing or using the Website, as applicable.
             </li>
@@ -271,9 +271,9 @@
           <h2 class="policy-terms-text">Contact Us</h2>
           <p class="policy-terms-texts">
             If you have any questions about this Cookies Policy, You can contact
-            us:
-            <a class="email-link" href="mailto:info@joyblazehub.com"
-              >info@joyblazehub.com</a
+            By email:
+            <a class="email-link" href="mailto:Info@sparkarcstar.com"
+              >Info@sparkarcstar.com</a
             >.
           </p>
         </div>
@@ -282,16 +282,16 @@
 
     <footer class="footer">
       <div class="footer-container">
-        <p class="footer-copyright">
-          ©2025 joyblazehub.com, All rights reserved.
-        </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy policy</a>
-          <a class="footer-text">/</a>
+          <a class="footer-text">|</a>
           <a class="footer-text" href="terms.html">Terms and conditions </a>
-          <a class="footer-text">/</a>
-          <a class="footer-text" href="cookies.html">Cookies Policy</a>
+          <a class="footer-text">|</a>
+          <a class="footer-text" href="cookies.html">Cookies policy</a>
         </div>
+        <p class="footer-copyright">
+          All rights reserved sparkarcstar.com | 2025
+        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
